# OpenGL

22_depth_testing/src/: Makefile  main.cpp
23_stencil_testing/1_masking/src/: main.cpp  main_backup.cpp
23_stencil_testing/2_masking_during_rotations/src/: main.cpp
23_stencil_testing/3_reflections/src/: main.cpp
23_stencil_testing/4_object_outlining/src/: main.cpp  main_backup.cpp
24_blending/blending_red_tinted_window/src/: main.cpp
24_blending/grass/src/: main.cpp
30_Geometry_Shader/GeometryShader_NormalVisualization/: CMakeLists.txt
30_Geometry_Shader/GeometryShader_normals/: CMakeLists.txt
30_Geometry_Shader/src/: main.cpp
31_instancing/: CMakeLists.txt
31_instancing/src/: Makefile  main.cpp
34_gamma_correction/: CMakeLists.txt
34_gamma_correction/src/: Makefile  main.cpp
35_shadows/: CMakeLists.txt
35_shadows/include/: gamesettings.cpp  gamesettings.h  modelloader.h  shader.cpp  shader.h
35_shadows/src/: Makefile  a.out  main.cpp  main1.cpp  main_backup.cpp  vertices.cpp
35_shadows/src/resources/: plastic_top.mtl  table.mtl
35_shadows/src/resources/multi_res_cube/: multires_cube.mtl
35_shadows/src/shaders/: \  depth_fragment_shader.frag  depth_vertex_shader.vert  depthmodel_fragment_shader.frag  depthmodel_vertex_shader.vert  fragment_shader.frag  vertex_shader.vert
35_shadows_1/include/: gamesettings.cpp
35_shadows_1/src/: Makefile  main.cpp  main_1.cpp  use_glew.h
animation/: CMakeLists.txt
animation/include/: modelloader.cpp
animation/misc/: bone_weight_mappings.txt
animation/src/: Makefile  main.cpp
(+134 files in other folders)
